--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -5,12 +5,16 @@
     align-items: center;
     padding: 20px 0;
     height: 80px;
+    position: fixed;
+    background-color: white;
+    z-index: 10;
 }
 
 .navbar a {
     text-decoration: none;
     color: black;
     font-weight: bold;
+    font-size: 20px;
 }
 
 .logo {
