--- a/client/src/components/Section2/Section2.css
+++ b/client/src/components/Section2/Section2.css
@@ -1,7 +1,7 @@
 .section2 {
   width: 100%;
   height: 100vh;
-  margin-top: 50px;
+  margin-top: 100px;
   display: flex;
   justify-content: space-around;
 }
@@ -34,5 +34,6 @@
 }
 
 .section2-img img{
-   width: 100%;
+    width: 100%;
+    border-radius: 0 100px;
 }
