--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -22,7 +22,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0, 0.2); /* adjust opacity here */
+  background-color: rgba(0,0,0, 0.3); /* adjust opacity here */
   z-index: 1;
 }
 
@@ -41,6 +41,10 @@
 }
 
 .hero-title h1 {
-    font-size: 48px;
+    font-size: 66px;
     margin-bottom: 30px;
+}
+
+.hero-title h3 {
+    font-size: 36px;
 }
