[UPDATE] Change swiper prev and next buttons color

--- a/client/src/components/Gallery/Gallery.css
+++ b/client/src/components/Gallery/Gallery.css
@@ -65,3 +65,10 @@
   color: white;
   cursor: pointer;
 }
+
+.swiper-button-prev {
+    color: #f0d431 !important;
+}
+.swiper-button-next {
+    color: #f0d431 !important;
+}
