--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -31,6 +31,7 @@
 
 .contact span {
     font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .footer-form {
@@ -157,4 +158,11 @@
   100% {
     left: 125%;
   }
+}
+
+.validation_err {
+    color: darkred;
+    font-size: 14px;
+    font-style: italic;
+    margin-left: 5px;
 }
